--- a/index.html
+++ b/index.html
@@ -13,63 +13,77 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <a href="index.html">
-                    <li>
-                        HOME
-                    </li>
-                </a>
-                <a href="#prog">
-                    <li>PROJETOS</li>
-                </a>
-                <a href="#iframe">
-                    <li>
-                        NOS-CONTRATE
-                    </li>
-                </a>
-            </ul>
-        </nav>
-    </header>
     <div class="interface">
-        <h1>
-            Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
-            <picture id="verificado">
-                <img src="verificado.png" alt="">
-            </picture>
-            </a>
-        </h1>
-        <section>
-            <h1 style="margin-bottom: 50px;">
-                Sou fundador de uma empresa referência em desenvolvimento de
-                projetos de software
-            </h1>
-            <h2>
-                Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
-                Desenvolvedores de <strong style="color:black;text-decoration: underline #517373">Sistemas</strong> para
-                transformar centavos <picture id="dinheiro">
-                    <img src="real-brasileiro.png" alt="">
-                </picture> em <strong style="color:black;text-decoration: underline #517373">milhões</strong>
-                <picture id="dinheiro">
-                    <img src="financiamento.png" alt="">
-                </picture>
-            </h2>
-            <picture id="grafico">
-                <img src="lucro.png" alt="">
-            </picture>
-            <p>
-                Lembrando que negociamos valores em uma reunião diretamente com o Programador
-            </p>
-        </section>
+        <header>
             <section>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html">
+                                HOME
+                            </a>
+                        </li>
+                        <a href="#prog">
+                            <li>PROJETOS</li>
+                        </a>
+                        <a href="#iframe">
+                            <li>
+                                NOS-CONTRATE
+                            </li>
+                        </a>
+                    </ul>
+                </nav>
+                <h1>
+                    Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
+                    <picture id="verificado">
+                        <img src="verificado.png" alt="">
+                    </picture>
+                    </a>
+                </h1>
+                <h1 style="margin-bottom: 50px;">
+                    Sou fundador de uma empresa referência em desenvolvimento de
+                    projetos de software
+                </h1>
+            </section>
+            <picture id="br">
+                <img src="brasil.png" alt="">
+            </picture>
+                <section>
+                              <h2>
+                    Empresa que usa um time brasileiro de
+                    Desenvolvedores de 
+                    <strong style="color:black;text-decoration: underline #517373">
+                        Sistemas
+                    </strong>
+                    para
+                    transformar centavos 
+                    <picture id="dinheiro">
+                        <img src="real-brasileiro.png" alt="">
+                    </picture>
+                     em 
+                    <strong style="color:black;text-decoration: underline #517373">
+                        milhões
+                    </strong>
+                    <picture id="dinheiro">
+                        <img src="financiamento.png" alt="">
+                    </picture>
+                </h2>
+                <p>
+                    Lembrando que negociamos valores em uma reunião diretamente com o Programador
+                </p>
+            </section>
+        </header>
+        <picture id="grafico">
+            <img src="lucro.png" alt="">
+        </picture>
+        <section>
             <p>
                 Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
                 que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
                 profissional' que você a tempos sonha em ter
             </p>
         </section>
-            <section>
+        <section>
             <h1 id="prog">
                 Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
             </h1>
@@ -113,11 +127,17 @@
             <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
                 <button>
                     CRM
-                </button>
+                    <picture id="miniLogoProjetos">
+<img src="iconsMoon.png" alt="">
+                    </picture>
+                    </button>
             </a>
             <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
                 <button>
                     Multiplanos
+                    <picture id="miniLogoProjetos">
+                        <img src="Multiplanos.png" alt="">
+                    </picture>
                 </button>
             </a>
             <!-- <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
@@ -146,7 +166,7 @@
                 </button>
             </a> -->
         </section>
-            <section>
+        <section>
             <p style="color: red;">
                 <strong>ATENÇÃO !</strong>
             </p>
@@ -157,16 +177,17 @@
                 CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
             </label>
         </section>
-            <section>
+        <section>
             <h1>
-                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimentoem aberto, caso queira acompanhar.
+                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimentoem aberto,
+                caso queira acompanhar.
             </h1>
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
-                                        <picture id="miniLogoProjetos">
-<img src="logo Zap Selling.png" alt="">
-                                        </picture>
+                    <picture id="miniLogoProjetos">
+                        <img src="logo Zap Selling.png" alt="">
+                    </picture>
                 </button>
             </a>
             <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
@@ -195,7 +216,7 @@
                     Whatsapp Web
                 </button>
             </a> -->
-                        <p>
+            <p>
                 Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
             </p>
             <p>
@@ -209,7 +230,7 @@
                 acessar ao <strong style="color:#517373">formulario</strong> de inscrição.
             </p>
         </section>
-            <section>
+        <section>
             <p>
                 Aqui você vai encontrar um grupo de <strong style="color:#517373">Desenvolvedores, UI x
                     UX</strong> e estrategistas de trafego <strong style="color: #517373">organico</strong> e
@@ -223,7 +244,7 @@
                 engenharia social.
             </p>
         </section>
-            <section>
+        <section>
             <h1 id="form">
                 <strong>
                     Aguardo ancioso para um entrevista.
