--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <picture id="br">
                 <img src="brasil.png" alt="">
             </picture>
-                <section>
-                              <h2>
+            <section>
+                <h2>
                     Empresa que usa um time brasileiro de
-                    Desenvolvedores de 
+                    Desenvolvedores de
                     <strong style="color:black;text-decoration: underline #517373">
                         Sistemas
                     </strong>
                     para
-                    transformar centavos 
+                    transformar centavos
                     <picture id="dinheiro">
                         <img src="real-brasileiro.png" alt="">
                     </picture>
-                     em 
+                    em
                     <strong style="color:black;text-decoration: underline #517373">
                         milhões
                     </strong>
@@ -87,19 +87,14 @@
             <h1 id="prog">
                 Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
             </h1>
+            <p>
+                Clique em alguns... fique avontade
+            </p>
             <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
                 <button>
                     Barber shop platform
                     <picture id="miniLogoProjetos">
                         <img src="logoBarbeiro.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-                <button>
-                    Guia do Programador
-                    <picture id="miniLogoProjetos">
-                        <img src="logoGuiaDoProgramador.png" alt="">
                     </picture>
                 </button>
             </a>
@@ -128,9 +123,9 @@
                 <button>
                     CRM
                     <picture id="miniLogoProjetos">
-<img src="iconsMoon.png" alt="">
+                        <img src="iconsMoon.png" alt="">
                     </picture>
-                    </button>
+                </button>
             </a>
             <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
                 <button>
@@ -167,21 +162,13 @@
             </a> -->
         </section>
         <section>
-            <p style="color: red;">
-                <strong>ATENÇÃO !</strong>
-            </p>
-            <label>
-                RESUMINDO
-                (CRIAMOS PLATAFORMAS PARA
-                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-            </label>
-        </section>
-        <section>
             <h1>
-                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimentoem aberto,
+                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento em aberto,
                 caso queira acompanhar.
             </h1>
+            <p>
+                Clique em alguns... fique avontade para opinar em nossos projetos, agradecemos muitos.
+            </p>
             <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
@@ -195,6 +182,14 @@
                     Pizzabot
                     <picture id="miniLogoProjetos">
                         <img src="logoStevePizza.png" alt="">
+                    </picture>
+                </button>
+            </a>
+            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+                <button>
+                    Guia do Programador
+                    <picture id="miniLogoProjetos">
+                        <img src="logoGuiaDoProgramador.png" alt="">
                     </picture>
                 </button>
             </a>
@@ -270,19 +265,40 @@
         <iframe id="iframe"
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
             frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <section>
+            <p style="color: red;">
+                <strong>ATENÇÃO !</strong>
+            </p>
+            <label>
+                RESUMINDO
+                (CRIAMOS PLATAFORMAS PARA
+                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+            </label>
+        </section>
+
     </div>
     <footer>
+           <p>
+            Desenvolvido por
+            <a href="https://www.instagram.com/nike_developer/" target="_blank">
+                <strong style="color: gold;">
+                    Nike
+                </strong>
+            </a>
+             para a empresa
+            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                <strong style="color: gold;">
+                    PK Produtos Digitais
+               </strong>
+                <img src="iconsMoon.png" alt="">
+            </a>
+        </p>
         <picture id="redesSociais">
             <img src="facebook.png" alt="">
             <img src="instagram.png" alt="">
             <img src="twitter.png" alt="">
         </picture>
-        <p>
-            Desenvolvido por <a href="https://www.instagram.com/nike_developer/" target="_blank">Nike</a> usando
-            linguagens de marcação
-            para a empresa<a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
-                Digitais <img src="iconsMoon.png" alt=""></a>
-        </p>
     </footer>
 </body>
 
