--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 
 <body>
     <div class="interface">
-        <picture id="moon">
-            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <img src="iconsMoon.png" alt="">
-            </a>
-        </picture>
         <header>
             <section>
                 <nav>
@@ -38,17 +33,17 @@
                         </a>
                     </ul>
                 </nav>
-                <h1>
-                    Eu sou o <strong><a href="https://www.instagram.com/nike_developer/">NIKE</strong>
-                    <picture id="verificado">
-                        <img src="verificado.png" alt="">
-                    </picture>
+                </picture>
+                                          <picture id="moon">
+                    <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                        <img src="lokoPK.png" alt="">
                     </a>
-                </h1>
-                <h1 style="margin-bottom: 50px;">
-                    Sou fundador de uma empresa referência em desenvolvimento de
-                    projetos de software
-                </h1>
+                    <h1 style="margin-bottom: 50px;">
+                       Referência em desenvolvimento de
+                        projetos de software  <picture id="verificado">
+                            <img src="verificado.png" alt="">
+                        </picture>
+                    </h1>
             </section>
             <picture id="br">
                 <img src="brasil.png" alt="">
@@ -74,7 +69,7 @@
                     </picture>
                 </h2>
                 <p>
-                    Lembrando que negociamos valores em uma reunião diretamente com o Programador
+                    Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
                 </p>
             </section>
         </header>
