--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="interface">
         <header>
             <section>
-                <nav>
+                <nav style="text-align: end;">
                     <ul>
                         <li>
                             <a href="index.html">
@@ -34,48 +34,46 @@
                     </ul>
                 </nav>
                 </picture>
-                                          <picture id="moon">
+                <picture id="moon">
                     <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
                         <img src="lokoPK.png" alt="">
                     </a>
+                    <picture id="verificado">
+                        <img src="verificado.png" alt="">
+                    </picture>
                     <h1 style="margin-bottom: 50px;">
-                       Referência em desenvolvimento de
-                        projetos de software  <picture id="verificado">
-                            <img src="verificado.png" alt="">
-                        </picture>
+                        Referência em desenvolvimento de
+                        projetos de software
                     </h1>
-            </section>
-            <picture id="br">
-                <img src="brasil.png" alt="">
-            </picture>
-            <section>
-                <h2>
-                    Empresa que usa um time brasileiro de
-                    Desenvolvedores de
-                    <strong style="color:black;text-decoration: underline #517373">
-                        Sistemas
-                    </strong>
-                    para
-                    transformar centavos
                     <picture id="dinheiro">
                         <img src="real-brasileiro.png" alt="">
                     </picture>
-                    em
-                    <strong style="color:black;text-decoration: underline #517373">
-                        milhões
-                    </strong>
                     <picture id="dinheiro">
                         <img src="financiamento.png" alt="">
                     </picture>
-                </h2>
-                <p>
-                    Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
-                </p>
+                    <h2>
+                        Empresa que usa um time brasileiro de
+                        Desenvolvedores de
+                        <strong style="color:black;text-decoration: underline #517373">
+                            Sistemas
+                        </strong>
+                        para
+                        transformar centavos em
+                        <strong style="color:black;text-decoration: underline #517373">
+                            milhões
+                        </strong>
+                                            </h2>
+                    <picture id="br">
+                        <img src="brasil.png" alt="">
+                    </picture>
+                    <p>
+                        Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
+                    </p>
+                    <picture id="grafico">
+                        <img src="lucro.png" alt="">
+                    </picture>
             </section>
         </header>
-        <picture id="grafico">
-            <img src="lucro.png" alt="">
-        </picture>
         <section>
             <p>
                 Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -83,8 +81,22 @@
                 profissional' que você a tempos sonha em ter
             </p>
         </section>
-        <section>
-            <h1 id="prog">
+        <p>
+            Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
+        </p>
+        <p>
+            Clique
+            <a href="#form" target="_blank">
+                <button type="button" id="ixd01">
+                    aqui
+                </button>
+            </a> para
+            acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
+        </p>
+        <picture id="InformationTechnology">
+            <img src="Information Technology.png" alt="">
+        </picture>
+            <h1 style="text-align: center;">
                 Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
             </h1>
             <p>
@@ -98,12 +110,7 @@
                     </picture>
                 </button>
             </a>
-            <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
-                    <button>
-                        Netflix
-                    </button>
-                </a> -->
-            <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+               <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
                 <button>
                     Duarte & Santos
                     <picture id="miniLogoProjetos">
@@ -135,41 +142,7 @@
                     </picture>
                 </button>
             </a>
-            <!-- <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
-                <button>
-                    Android
-                </button>
-            </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
-                <button>
-                    X
-                </button>
-            </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
-                    <button>
-                        Instagram
-                    </button>
-                </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
-                <button>
-                    Facebook
-                </button>
-            </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
-                <button>
-                    Google Glass
-                </button>
-            </a> -->
-        </section>
-        <section>
-            <h1>
-                Deixamos alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento em aberto,
-                caso queira acompanhar.
-            </h1>
-            <p>
-                Clique em alguns... fique avontade para opinar em nossos projetos, agradecemos muitos.
-            </p>
-            <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+               <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                 <button>
                     Zap Selling
                     <picture id="miniLogoProjetos">
@@ -193,45 +166,10 @@
                     </picture>
                 </button>
             </a>
-            <!-- <a href="https://pablo-kennediy.github.io/Acai-Bot/">
-                Açai Bot
-                <button>
-                    <picture id="miniLogoProjetos">
-                        <img src="" alt="">
-                    </picture>
-                </button>
-            </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
-                <button>
-                    Muay Thai
-                </button>
-            </a> -->
-            <!-- <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
-                <button>
-                    Whatsapp Web
-                </button>
-            </a> -->
-        </section>
-        <section>
-            <p>
-                Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
-            </p>
-            <p>
-                Clique
-                <a href="#form" target="_blank">
-                    <button type="button" id="ixd01">
-                        aqui
-
-                    </button>
-                </a> para
-                acessar ao <strong style="color:#517373">formulario</strong> de inscrição.
-            </p>
-        </section>
-        <section>
-            <p>
-                Aqui você vai encontrar um grupo de <strong style="color:#517373">Desenvolvedores, UI x
-                    UX</strong> e estrategistas de trafego <strong style="color: #517373">organico</strong> e
-                <strong style="color:#517373">pago</strong> atuamos principalmente com a venda e revenda
+                <p>
+                Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
+                    UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
+                <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
                 de
                 scripts ou modelos.
             </p>
@@ -240,8 +178,6 @@
                 computação e uma mistura de
                 engenharia social.
             </p>
-        </section>
-        <section>
             <h1 id="form">
                 <strong>
                     Aguardo ancioso para um entrevista.
@@ -254,17 +190,15 @@
                         aqui
                     </button>
                 </a>
-                para ter mais informações do nosso <strong style="color: #517373">Portifolio</strong>
+                para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
             </p>
             <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
-                    style="border-radius: 15px;" src="digital.png" alt="digital"></a>
-        </section>
+                    style="border-radius: 15px;" src="digital.png" alt="digital"></a>       
         <iframe id="iframe"
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-        <section>
-            <p style="color: red;">
-                <strong>ATENÇÃO !</strong>
+            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>       
+            <p style="text-align: center;">
+                <strong style="color: #230D73;">ATENÇÃO !</strong>
             </p>
             <label>
                 RESUMINDO
@@ -272,20 +206,18 @@
                 INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                 CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
             </label>
-        </section>
-
-    </div>
+          </div>
     <footer>
         <p>
             Desenvolvido por
             <a href="https://www.instagram.com/nike_developer/" target="_blank">
-                <strong style="color: gold;">
+                <strong style="color: #230D73;">
                     Nike
                 </strong>
             </a>
             para a empresa
             <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <strong style="color: gold;">
+                <strong style="color: #230D73;">
                     PK Produtos Digitais
                 </strong>
                 <img src="iconsMoon.png" alt="">
