--- a/index.html
+++ b/index.html
@@ -8,72 +8,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="digital.png" type="image/x-icon">
     <title>Portifolio</title>
 </head>
 
 <body>
     <div class="interface">
         <header>
-            <section>
-                <nav style="text-align: end;">
-                    <ul>
+            <nav style="text-align: end;">
+                <ul>
+                    <a href="index.html">
                         <li>
-                            <a href="index.html">
-                                HOME
-                            </a>
+                            HOME
                         </li>
-                        <a href="#prog">
-                            <li>PROJETOS</li>
-                        </a>
-                        <a href="#iframe">
-                            <li>
-                                NOS-CONTRATE
-                            </li>
-                        </a>
-                    </ul>
-                </nav>
-                </picture>
-                <picture id="moon">
-                    <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                        <img src="lokoPK.png" alt="">
                     </a>
-                    <picture id="verificado">
-                        <img src="verificado.png" alt="">
-                    </picture>
-                    <h1 style="margin-bottom: 50px;">
-                        Referência em desenvolvimento de
-                        projetos de software
-                    </h1>
-                    <picture id="dinheiro">
-                        <img src="real-brasileiro.png" alt="">
-                    </picture>
-                    <picture id="dinheiro">
-                        <img src="financiamento.png" alt="">
-                    </picture>
-                    <h2>
-                        Empresa que usa um time brasileiro de
-                        Desenvolvedores de
-                        <strong style="color:black;text-decoration: underline #517373">
-                            Sistemas
-                        </strong>
-                        para
-                        transformar centavos em
-                        <strong style="color:black;text-decoration: underline #517373">
-                            milhões
-                        </strong>
-                                            </h2>
-                    <picture id="br">
-                        <img src="brasil.png" alt="">
-                    </picture>
-                    <p>
-                        Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
-                    </p>
-                    <picture id="grafico">
-                        <img src="lucro.png" alt="">
-                    </picture>
-            </section>
+                    <a href="#prog">
+                        <li>PROJETOS</li>
+                    </a>
+                    <a href="#iframe">
+                        <li>
+                            NOS-CONTRATE
+                        </li>
+                    </a>
+                </ul>
+            </nav>
         </header>
+            <picture id="moon">
+                <img src="lokoPK.png" alt="">
+            </picture>
+            <picture id="verificado">
+                <img src="verificado.png" alt="">
+            </picture>
+            <h1 style="margin-bottom: 50px;">
+                Referência em desenvolvimento de
+                projetos de software
+            </h1>
+            <picture id="InformationTechnology">
+                <img src="Information Technology.png" alt="">
+            </picture>
+            <picture id="dinheiro">
+                <img src="real-brasileiro.png" alt="">
+            </picture>
+            <picture id="dinheiro">
+                <img src="financiamento.png" alt="">
+            </picture>
+            <h2>
+                Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar
+                <strong style="color:black;text-decoration: underline #517373">
+                    centavos
+                 </strong>
+                em
+                <strong style="color:black;text-decoration: underline #517373">
+                    milhões
+                </strong>
+            </h2>
+            <!-- <picture id="br">
+                            <img src="brasil.png" alt="">
+                        </picture> -->
+            <p>
+                Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
+            </p>
         <section>
             <p>
                 Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -93,120 +87,120 @@
             </a> para
             acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
         </p>
-        <picture id="InformationTechnology">
-            <img src="Information Technology.png" alt="">
+              <h1 style="text-align: center;">
+            Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
+        </h1>
+        <p>
+            Clique em alguns... fique avontade
+        </p>
+        <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
+            <button>
+                Barber shop platform
+                <picture id="miniLogoProjetos">
+                    <img src="logoBarbeiro.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
+            <button>
+                Duarte & Santos
+                <picture id="miniLogoProjetos">
+                    <img src="logoADV.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
+            <button>
+                Homem-Arranha
+                <picture id="miniLogoProjetos">
+                    <img src="logoHomemAranha.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
+            <button>
+                CRM
+                <picture id="miniLogoProjetos">
+                    <img src="iconsMoon.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
+            <button>
+                Multiplanos
+                <picture id="miniLogoProjetos">
+                    <img src="Multiplanos.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
+            <button>
+                Zap Selling
+                <picture id="miniLogoProjetos">
+                    <img src="logo Zap Selling.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
+            <button>
+                Pizzabot
+                <picture id="miniLogoProjetos">
+                    <img src="logoStevePizza.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
+            <button>
+                Guia do Programador
+                <picture id="miniLogoProjetos">
+                    <img src="logoGuiaDoProgramador.png" alt="">
+                </picture>
+            </button>
+        </a>
+        <p>
+            Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
+                UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
+            <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
+            de
+            scripts ou modelos.
+        </p>
+        <p>
+            Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
+            computação e uma mistura de
+            engenharia social.
+        </p>
+        <picture id="grafico">
+            <img src="lucro.png" alt="">
         </picture>
-            <h1 style="text-align: center;">
-                Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
-            </h1>
-            <p>
-                Clique em alguns... fique avontade
-            </p>
-            <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
-                <button>
-                    Barber shop platform
-                    <picture id="miniLogoProjetos">
-                        <img src="logoBarbeiro.png" alt="">
-                    </picture>
+        <h1 id="form">
+            <strong>
+                Aguardo ancioso para um entrevista.
+            </strong>
+        </h1>
+        <p>
+            Clique
+            <a href="https://iplis.ru/meu-portifolio" target="_blank">
+                <button type="button" id="ixd01">
+                    aqui
                 </button>
             </a>
-               <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
-                <button>
-                    Duarte & Santos
-                    <picture id="miniLogoProjetos">
-                        <img src="logoADV.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
-                <button>
-                    Homem-Arranha
-                    <picture id="miniLogoProjetos">
-                        <img src="logoHomemAranha.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
-                <button>
-                    CRM
-                    <picture id="miniLogoProjetos">
-                        <img src="iconsMoon.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
-                <button>
-                    Multiplanos
-                    <picture id="miniLogoProjetos">
-                        <img src="Multiplanos.png" alt="">
-                    </picture>
-                </button>
-            </a>
-               <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
-                <button>
-                    Zap Selling
-                    <picture id="miniLogoProjetos">
-                        <img src="logo Zap Selling.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/pizzeria-platform/">
-                <button>
-                    Pizzabot
-                    <picture id="miniLogoProjetos">
-                        <img src="logoStevePizza.png" alt="">
-                    </picture>
-                </button>
-            </a>
-            <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
-                <button>
-                    Guia do Programador
-                    <picture id="miniLogoProjetos">
-                        <img src="logoGuiaDoProgramador.png" alt="">
-                    </picture>
-                </button>
-            </a>
-                <p>
-                Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
-                    UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
-                <strong style="color:#230D73">pago</strong> atuamos principalmente com a venda e revenda
-                de
-                scripts ou modelos.
-            </p>
-            <p>
-                Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
-                computação e uma mistura de
-                engenharia social.
-            </p>
-            <h1 id="form">
-                <strong>
-                    Aguardo ancioso para um entrevista.
-                </strong>
-            </h1>
-            <p>
-                Clique
-                <a href="https://iplis.ru/meu-portifolio" target="_blank">
-                    <button type="button" id="ixd01">
-                        aqui
-                    </button>
-                </a>
-                para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
-            </p>
-            <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
-                    style="border-radius: 15px;" src="digital.png" alt="digital"></a>       
+            para ter mais informações do nosso <strong style="color: #230D73">Portifolio</strong>
+        </p>
+        <a id="digital" href="https://www.instagram.com/nike_developer/" target="_blank"><img
+                style="border-radius: 15px;" src="digital.png" alt="digital"></a>
         <iframe id="iframe"
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>       
-            <p style="text-align: center;">
-                <strong style="color: #230D73;">ATENÇÃO !</strong>
-            </p>
-            <label>
-                RESUMINDO
-                (CRIAMOS PLATAFORMAS PARA
-                INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-                CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-            </label>
-          </div>
+            frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <p style="text-align: center;">
+            <strong style="color: #230D73;">ATENÇÃO !</strong>
+        </p>
+        <label>
+            RESUMINDO
+            (CRIAMOS PLATAFORMAS PARA
+            INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+            CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+        </label>
+    </div>
     <footer>
         <p>
             Desenvolvido por
