--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <div class="interface">
         <header>
-            <nav style="text-align: end;">
+            <nav>
                 <ul>
-                    <a href="index.html">
+                    <a href="#moon">
                         <li>
                             HOME
                         </li>
@@ -33,41 +33,32 @@
                 </ul>
             </nav>
         </header>
-            <picture id="moon">
-                <img src="lokoPK.png" alt="">
-            </picture>
+        <picture id="InformationTechnology">
+            <img src="Information Technology.png" alt="">
+        </picture>
+        <h1>
+            Seu espaço digital é a peça que faltava !
+        </h1>
+        <div class="flex" style="float: right; padding: 50px; max-width: 500px;">
+            <h2>
+                Oferecemos mentorias com certificados reconhecidos pelo MEC
+            </h2>
             <picture id="verificado">
                 <img src="verificado.png" alt="">
             </picture>
-            <h1 style="margin-bottom: 50px;">
-                Referência em desenvolvimento de
-                projetos de software
-            </h1>
-            <picture id="InformationTechnology">
-                <img src="Information Technology.png" alt="">
-            </picture>
-            <picture id="dinheiro">
-                <img src="real-brasileiro.png" alt="">
-            </picture>
-            <picture id="dinheiro">
-                <img src="financiamento.png" alt="">
-            </picture>
-            <h2>
-                Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar
-                <strong style="color:black;text-decoration: underline #517373">
-                    centavos
-                 </strong>
-                em
-                <strong style="color:black;text-decoration: underline #517373">
-                    milhões
-                </strong>
-            </h2>
-            <!-- <picture id="br">
+        </div>
+        <picture id="moon">
+            <img src="lokoPK.png" alt="">
+        </picture>
+              <h1>
+            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+        </h1>
+        <!-- <picture id="br">
                             <img src="brasil.png" alt="">
                         </picture> -->
-            <p>
-                Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
-            </p>
+        <p>
+            Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
+        </p>
         <section>
             <p>
                 Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
@@ -87,7 +78,7 @@
             </a> para
             acessar ao <strong style="color:#230D73">formulario</strong> de inscrição.
         </p>
-              <h1 style="text-align: center;">
+        <h1 id="prog">
             Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
         </h1>
         <p>
