--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <h1>
             Seu espaço digital é a peça que faltava !
         </h1>
+        <picture id="moon">
+            <img src="lokoPK.png" alt="">
+        </picture>
+               <h1>
+            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
+        </h1>
         <div class="flex" style="float: right; padding: 50px; max-width: 500px;">
             <h2>
                 Oferecemos mentorias com certificados reconhecidos pelo MEC
@@ -47,21 +53,20 @@
                 <img src="verificado.png" alt="">
             </picture>
         </div>
-        <picture id="moon">
-            <img src="lokoPK.png" alt="">
-        </picture>
-              <h1>
-            Empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar centavos em milhões
-        </h1>
-        <!-- <picture id="br">
-                            <img src="brasil.png" alt="">
-                        </picture> -->
-        <p>
-            Lembrando que negociamos valores em uma reunião diretamente com o time de Desenvolvedores
-        </p>
+        <picture id="predio">
+            <img src="www.reallygreatsite.com.png" alt="">
+        </picture>  
         <section>
+            <h1>
+                Venha conversar e compartilhe sua ideia conosco.
+            </h1>  
             <p>
-                Eles servem para você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
+                Lembrando que todos os orçamentos são revisados em uma reunião online via Google Meet diretamente com o time de Desenvolvedores
+            </p>
+        </section>
+              <section>
+            <p>
+                Na reunição você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
                 que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
                 profissional' que você a tempos sonha em ter
             </p>
