--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
               <section>
             <p>
-                Na reunição você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
+                Na reunião você retirar duvidas, solicitar referências do nosso trabalho e ter a certeza absoluta
                 que a empresa <strong>PK Digital Products</strong> vai ajudar você a alcançar o nivel de 'site
                 profissional' que você a tempos sonha em ter
             </p>
@@ -86,7 +86,8 @@
         <h1 id="prog">
             Deixamos alguns dos milhares de projetos WEB que já foram finalizados em aberto, caso queira acompanhar.
         </h1>
-        <p>
+        <div style="background: #230D73; color: white;">
+<p style="color: white; font-size: larger; text-align: center;">
             Clique em alguns... fique avontade
         </p>
         <a href="https://pablo-kennediy.github.io/Barber-shop-platform/">
@@ -153,6 +154,7 @@
                 </picture>
             </button>
         </a>
+        </div>
         <p>
             Aqui você vai encontrar um grupo de <strong style="color:#230D73">Desenvolvedores, UI x
                 UX</strong> e estrategistas de trafego <strong style="color: #230D73">organico</strong> e
